Src/objects/Testing1__c.object
<CustomObject>
    <description>Creating a testing Object for learning Object, tabs and fields.</description>
    <fields>
        <fullName>Graduated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Creating to confirm that user is Graduated or not.</description>
        <inlineHelpText>Are you Graduated?</inlineHelpText>
        <label>Graduated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testing_Picklist__c</fullName>
        <label>Testing Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testing_text__c</fullName>
        <label>Testing text</label>
        <length>39</length>
        <type>Text</type>
    </fields>
    <label>A Testing Object1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Testing1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A Testing Objects1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_Graduate_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>Graduated__c = True</errorConditionFormula>
        <errorMessage>Graduation is Mandatory.</errorMessage>
    </validationRules>
</CustomObject>